@@ -1,6 +1,8 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002004
+ [Changed / test recommends]
+ - Test::More 1.001008 → 0.99
 
 0.002003 2014-10-31T15:02:11Z
  [Changed / configure recommends]
